--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -35,3 +35,12 @@
     word-wrap: break-word;
     white-space: pre-wrap;
 }
+
+.md-header__button.md-logo {
+    padding: 0.2rem 0 0 0.4rem;
+}
+
+.md-header__button.md-logo img {
+    height: 2rem;
+    
+}
