--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -52,3 +52,7 @@
 .md-clipboard:is(:focus, :hover) {
      color: var(--md-accent-fg-color);
 }
+
+.md-header__button.md-logo :-webkit-any(img,svg) {
+    height: 2rem;
+}
